editing few things in the frontend

--- a/src/sass/body.css
+++ b/src/sass/body.css
@@ -36,7 +36,7 @@
 }
 
 .body .intro .big h1 {
-  font-family: "Roboto-Regular";
+  font-family: "Rubik-Light";
   font-size: 3.6rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
@@ -50,7 +50,7 @@
 
 .body .intro .small h1 {
   text-align: center;
-  font-family: "Roboto-Regular";
+  font-family: "Rubik-Light";
   font-size: 1.6rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
@@ -97,7 +97,7 @@
 .body .inp form input {
   position: relative;
   width: 90%;
-  height: 90%;
+  height: 75%;
   border: none;
   -webkit-box-shadow: inset 0rem 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
           box-shadow: inset 0rem 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
@@ -105,14 +105,14 @@
   background-color: rgba(184, 176, 224, 0.3);
   outline: none;
   text-indent: 1rem;
-  font-family: "Roboto-Regular";
+  font-family: "Rubik-Light";
   font-size: 2rem;
   padding-right: 13rem;
 }
 
 .body .inp form button {
   width: 10rem;
-  height: 60%;
+  height: 55%;
   background: rgba(64, 56, 152, 0.6);
   border: none;
   -webkit-box-shadow: 0rem 1rem 1rem rgba(0, 0, 0, 0.4);
@@ -125,6 +125,13 @@
   text-transform: capitalize;
   color: #fff;
   font-family: "Poppins-Light";
+}
+
+.body .inp form button:active {
+  -webkit-transform: scale(0.96);
+          transform: scale(0.96);
+  -webkit-box-shadow: 0rem 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+          box-shadow: 0rem 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 
 .body .inp .shortened {
@@ -171,7 +178,7 @@
 }
 
 .body .outro .large h1 {
-  font-family: "Roboto-Regular";
+  font-family: "Rubik-Light";
   font-size: 2.8rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
