converted react to nextjs completely, awaiting api conversion

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,11 +12,11 @@ body {
 
 @font-face {
   font-family: novaslim;
-  src: url("../assets/novaslim.ttf");
+  src: url("../public/novaslim.ttf");
 }
 @font-face {
   font-family: comforter;
-  src: url("../assets/comforter.ttf");
+  src: url("../public/comforter.ttf");
 }
 
 @tailwind base;
